Choose performance- / application-container dash based on availability of injected / provided metrics
Signed-off-by: Matthew Colegate <colegate@uk.ibm.com>